# toast-exports-etl

./: .env.example  .gitignore  Design.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: toast-orders-docs.mdc
db/: create_tables.py  create_time_entries_table.sql  drop_tables.py  drop_tables.sql  drop_time_entries_table.sql  mydatabase.dump
diagrams/: README.md  schema_dbdiagram.sql
docs/: TimeEntries.md
file_processors/: menu_processor.py  orders_processor.py  time_entries_processor.py
samaple-data/20240410/: CheckDetails.csv  OrderDetails.csv  TimeEntries.csv
sample_data/: README.md
sample_data/20240410/: AllItemsReport.csv  CashEntries.csv  ItemSelectionDetails.csv  KitchenTimings.csv  ModifiersSelectionDetails.csv  PaymentDetails.csv
src/: __init__.py  database.py  filehandlers.py  main.py  utils.py
src/toast_exports/: __main__.py  config.py
src/toast_exports/db/: create_tables.py  drop_tables.py
src/toast_exports/file_processors/: menu_processor.py  orders_processor.py  time_entries_processor.py
src/toast_exports/utils/: name_formatter.py
tests/: test_name_formatter.py  test_orders_processor.py  test_time_entries_processor.py
tools/db/: README.md  pg_dump.sh
